[package]
name = "hexahedron"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calc"
path = "./bin/calc.rs"

[[bin]]
name = "codegen"
path = "./bin/codegen.rs"

[[bin]]
name = "sandbox"
path = "./bin/sandbox.rs"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
chrono = "0.4.38"
flate2 = "1.0.33"
glam = "0.29.0"
gltf = "1.4.1"
hashbrown = "0.14.5"
image = "0.25.2"
itertools = "0.13.0"
noise = "0.9.0"
paste = "1.0.15"
rand = "0.8.5"
rollgrid = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
splines = { version = "4.3.1", features = ["glam"] }
tap = "1.0.1"
thiserror = "1.0.63"
