# workspace = { members = ["hexmacros"] }
[workspace]
members = [
    "hexcolor",
    "hexcore", "hexgpu", "hexhash", "hexio",
    "hexmacros", "hexmath", "hexorient", "hexregion",
]

[package]
name = "hexahedron"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "calc"
path = "./bin/calc.rs"

[[bin]]
name = "engine-test"
path = "./bin/engine_test/main.rs"

# [[bin]]
# name = "codegen"
# path = "./bin/codegen.rs"

# [[bin]]
# name = "sandbox"
# path = "./bin/sandbox/main.rs"

[dependencies]
# These commented out crates are likely to be used, but are not included right now.
# blake3 = "1.5.5"
# chrono = "0.4.38"
# flate2 = "1.0.33"
# gltf = "1.4.1"
# 
# noise = "0.9.0"
# parking_lot = "0.12.3"
# rollgrid = { version = "3.0.1", features = ["serde"]}
# sha2 = "0.10.8"
# splines = { version = "4.3.1", features = ["glam"] }
# tap = "1.0.1"
# tokio = { version = "1.41.1", features = ["full"] }
# twox-hash = "2.1.0"
# argon2 = "0.5.3"
# aes = "0.8.4"

# Internal Crates
hexmacros.workspace = true
# External Crates
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
spin_sleep.workspace = true
rand.workspace = true
paste.workspace = true
image.workspace = true
hashbrown.workspace = true
glam.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json.workspace = true
hexmath.workspace = true
hexcore.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
gilrs.workspace = true
itertools.workspace = true

[workspace.dependencies]
# Internal Crates
hexcore = { path = "hexcore" }
hexmacros = { path = "hexmacros" }
hexmath = { path = "hexmath" }
# External Crates
thiserror = "1.0.63"
wgpu = "24.0.1"
winit = { version = "0.29", features = ["rwh_05"] }
pollster = { version = "0.4.0", features = ["macro"] }
spin_sleep = "1.3.0"
rand = "0.8.5"
paste = "1.0.15"
image = "0.25.2"
hashbrown = { version = "0.14.5", features = ["serde"] }
glam = { version = "0.29.0", features = ["serde", "bytemuck"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.7"
log = "0.4.26"
chrono = "0.4.40"
gilrs = { version = "0.11.0", default-features = false, features = ["xinput"] }
itertools = "0.13.0"
