[package]
name = "hexcore"
version = "0.1.0"
edition = "2021"

[dependencies]
hexmacros = { path = "../hexmacros" }
serde = { version = "1.0.210", features = ["derive"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
# hashbrown = { version = "0.14.5", features = ["serde"] }
# glam = { version = "0.29.0", features = ["serde", "bytemuck"] }
# itertools = "0.13.0"