[package]
name = "hexcore"
version = "0.1.0"
edition = "2021"

[dependencies]
hexmacros = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
# hashbrown = { version = "0.14.5", features = ["serde"] }
# glam = { version = "0.29.0", features = ["serde", "bytemuck"] }
# itertools = "0.13.0"