[package]
name = "hexgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
hexmacros = { workspace = true }
# serde = { version = "1.0.210", features = ["derive"] }
# bytemuck = { version = "1.18.0", features = ["derive"] }
glam = { workspace = true }
paste = { workspace = true }
# itertools = "0.13.0"
bytemuck = { workspace = true }
thiserror = { workspace = true }