[package]
name = "hexio"
version = "0.1.0"
edition = "2021"

[dependencies]
hexmacros = { path = "../hexmacros" }
# serde = { version = "1.0.210", features = ["derive"] }
# bytemuck = { version = "1.18.0", features = ["derive"] }
glam = { version = "0.29.0", features = ["serde", "bytemuck"] }
paste = "1.0.15"
itertools = "0.13.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
thiserror = "1.0.63"