[package]
name = "hexmacros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
argon2 = "0.5.3"
hashbrown = { workspace = true }
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
quote = "1.0.38"
syn = { version = "2.0.96", features = ["extra-traits", "full"] }
rand = { workspace = true }
